# h2data-dynamic-fuel-atlas

./: .gitattributes  .gitignore  CITATION.cff  CODE_AVAILABILITY.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
docs/: app.js  index.html  styles.css
docs/data/: ammonia_2030.json  ammonia_2035.json  ammonia_2050.json  metadata.json  methanol_2030.json  methanol_2035.json  methanol_2050.json  saf_2030.json  saf_2035.json  saf_2050.json
examples/: README.md
scripts/: prepare_web_data.py
src/h2data/: __init__.py  am_optimizer.py  calculate_h2_chunk_static_lcoe.py  calculate_static_downstream_from_h2.py  ftl_optimizer.py  h2_optimizer.py  me_optimizer.py
