[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "h2data-dynamic-fuel-atlas"
version = "0.1.0"
description = "8760-hour optimization and web atlas code for renewable hydrogen-derived fuels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "xarray>=2023.1",
  "gurobipy>=11.0",
]

[tool.setuptools.packages.find]
where = ["src"]
